@@ -21,6 +21,7 @@ mm/dd/yy richardjgowers, kain88-de, lilyminium, p-j-smith, bdice, joaomcteixeira
   * 0.21.0
 
 Fixes
+  * Fixed Lammps Dump parser can't do variable columns (Issue #2131)
   * Fixes outdated :class:`TRJReader` documentation on random frame access
     (Issue #2398)
   * Fixed mda.Merge for Universes without coordinates (Issue #2470)(PR #2580)
